# allen-moronuki

./: .#ExercisesChapter14.hs  AmbiguousTypeclass.hs  Arith2.hs  Arith3Broken.hs  Arith4.hs  CaesarCipher.hs  Chapter10.hs  Chapter11.hs  Chapter12.hs  Chapter13.hs  Chapter14.hs  Chapter15.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapter7.hs  Chapter8.hs  Chapter9.hs  DeconstructingValues.hs  DetermineTheType.hs  Division.hs  EmployeeRank1.hs  EmployeeRank2.hs  EqCaseGuard.hs  ExercisesChapter10.hs  ExercisesChapter11.hs  ExercisesChapter12.hs  ExercisesChapter13.hs  ExercisesChapter14.hs  ExercisesChapter15.hs  ExercisesChapter2.hs  ExercisesChapter3.hs  ExercisesChapter4.hs  ExercisesChapter5.hs  ExercisesChapter6.hs  ExercisesChapter7.hs  ExercisesChapter8.hs  ExercisesChapter9.hs  Fib.hs  (+34 more)
chapter13/: hello.cabal
chapter13/exe/: Main.hs
chapter13/hangman/: hangman.cabal
chapter13/hangman/data/: dict.txt
chapter13/hangman/src/: Main.hs
chapter13/hello/: stack.yaml
chapter13/hello/exe/: Main.hs
chapter13/hello/src/: Hello.hs
chapter13/src/: Hello.hs  Main.hs
chapter14/addition/: Addition.hs  addition.cabal
chapter14/morse/: morse.cabal
chapter14/morse/src/: Main.hs  Morse.hs
chapter14/morse/test/: Spec.hs
