-- addition.cabal

name: addition
version: 0.0.1
license-file: LICENSE
author: David Banks
maintainer: amoebae@gmail.com
category: Text
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules: Addition
  ghc-options: -Wall -fwarn-tabs
  build-depends: base >=4.7 && <5
                 hspec
  hs-source-dirs: .
  default-language: Haskell2010
