name:           morse
version:        0.1.0.0
author:         David Banks
maintainer:     amoebae@gmail.com
copyright:      2020 David Banks
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

library
  exposed-modules:
      Morse
  ghc-options:
      -Wall -Wno-missing-signatures -fwarn-tabs 
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      containers,
      QuickCheck
  default-language: Haskell2010

executable morse
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -Wall -fwarn-tabs
  build-depends:
      base >=4.7 && <5,
      containers,
      QuickCheck,
      morse
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -fno-warn-orphans
  build-depends:
      base >=4.7 && <5, containers, QuickCheck, morse
  default-language: Haskell2010
